Fixed invisible links toggler

--- a/view/adminhtml/web/css/layout/_grid-item-links.less
+++ b/view/adminhtml/web/css/layout/_grid-item-links.less
@@ -4,6 +4,7 @@
             position: absolute;
             right: 0;
             top: 0;
+            z-index: 11;
 
             .action-select {
                 padding: 0;
